# LogicGateSimulator

./: CMakeLists.txt  README.md
src/: main.cpp
src/controller/: ConnectionManager.cpp  ConnectionManager.h  SimulationController.cpp  SimulationController.h
src/model/: Circuit.cpp  Circuit.h  Connection.cpp  Connection.h  LogicGate.cpp  LogicGate.h  LogicState.h  Pin.cpp  Pin.h
src/model/gates/: AndGate.cpp  AndGate.h  NandGate.cpp  NandGate.h  NorGate.cpp  NorGate.h  NotGate.cpp  NotGate.h  OrGate.cpp  OrGate.h  SinkNode.cpp  SinkNode.h  SourceNode.cpp  SourceNode.h  XorGate.cpp  XorGate.h
src/view/: ConnectionGraphicsItem.cpp  ConnectionGraphicsItem.h  MainWindow.cpp  MainWindow.h  NodeGraphicsItem.cpp  NodeGraphicsItem.h  PinGraphicsItem.cpp  PinGraphicsItem.h  SimulationCanvas.cpp  SimulationCanvas.h  ToolbarWidget.cpp  ToolbarWidget.h
